# integer-scaling

./: README.md  testcases.json
_testcases/: 256x224.json  280x192.json  320x200.json  320x224.json  384x224.json  400x254.json  640x400.json  720x400.json  check.php  testcases.json
cpp/: IntegerScaling.cpp  IntegerScaling.h
cpp/src/: IntegerScaling.cpp  IntegerScaling.h
js/: README.md  integer-scaling.js  package.json
php/: composer.json  see_integer-scaling-php_repo.md  see_integer-scaling-php_repo.txt
php/src/: IntegerScaling.php
php/src/IntegerScaling/: Ratios.php  Size.php
rust/camel-case/: Cargo.toml
rust/camel-case/src/: IntegerScaling.rs
rust/snake-case/: Cargo.toml  README.md
rust/snake-case/src/: integer_scaling.rs
