[package]
name = "integer_scaling"
version = "1.2.3"
authors = ["Marat Tanalin (http://tanalin.com )"]
edition = "2018"
description = "IntegerScaling wrapper for those who prefer snake_case."
homepage = "http://tanalin.com/en/projects/integer-scaling/"
repository = "https://github.com/Marat-Tanalin/integer-scaling"
license = "MIT"
readme = "README.md"

[lib]
path = "src/integer_scaling.rs"

[dependencies]
IntegerScaling = "1.2.3"